# bodhiorchard

./: .dockerignore  .env.production.example  .gitignore  AGENTS.md  BODHIGROVE-ARCHITECTURE.md  BODHIORCHARD-ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  FLOWDEV-ARCHITECTURE.md  GARDEN_GAMIFICATION_PLAN.md  LICENSE  MCP-REMOTE.md  NOTICE  PHASE9_RESEARCH.md  README.md  SECURITY.md  THIRD_PARTY_CREDITS.md  TODO.md  deploy.sh  docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 039479826ecb_rename_xp_events_to_reward_events_add_.py  07eecbe67e31_add_agent_activity_logs_table.py  0e21a0b1f737_drop_setup_last_error_debug_column.py  11d8392f4c09_add_dev_session_logs_table.py  15f415a484f1_prune_orphan_agent_skills_rows_whose_.py  16f29f1b2a33_drop_created_by_from_knowledge_items.py  18bb5e095ca2_merge_zb_drop_actor_role_zc_triage_.py  281bc0331ae5_remove_todo_generator_skill_rows.py  29fbe5000c91_add_mcp_audit_log_table.py  2c0717fc1c90_add_phase_failure_acknowledged_at_to_.py  2c87d34be5bc_user_mcp_tokens_add_name_expires_at_.py  2cd5153962b3_add_pull_requests_and_github_fields.py  2e830531ddcf_bud_auto_generate_to_per_phase_jsonb.py  303b6aac7141_add_auto_generate_flag_to_bud_documents.py  3922c4bb35ad_add_skill_points_house_level_vehicle_.py  402d2f21dcfa_add_must_change_password_to_users.py  42c23bf48e1d_initial_schema.py  49c94f23fd15_add_dev_activity_logs_table.py  50e73dd335ca_custom_skills_and_per_bud_stage_.py  5343dbfdc95d_remove_unused_backend_frontend_.py  550e56ff912d_add_created_at_sha_to_features.py  555236b875ed_user_mcp_tokens_defensively_drop_stale_.py  56fa72b2cc1c_design_system_refs_add_custom_content.py  5e3c255c0cdc_drop_code_locations_from_knowledge_items.py  6e375ee9d275_users_add_unique_constraint_on_email.py  7155600b973a_drop_setup_last_error_debug_column.py  73bce4e5a843_add_impacted_repos_and_commit_author_.py  75212a109582_add_code_review_comments_column.py  7ae55c9d056a_add_bud_section_sessions_table.py  84cf56c5f2d8_merge_a1_and_z4_heads.py  88f86e7e5e03_add_active_job_pointer_to_bud_section_.py  9c58acc3643d_add_unique_partial_index_on_xp_events_.py  9cebb2e45a3c_bud_versions_append_only_edit_history_.py  9e6edbdfee20_add_bud_estimates_and_snapshots.py  9ec875b34b71_bud_todos_add_repo_name_code_locations_.py  a1_add_tech_arch_and_manager.py  a1b2c3d4e5f6_add_feature_lifecycle.py  a3f7b2c1d4e5_drop_bud_commits_table.py  af34446bb2fe_mcp_audit_log_add_params_jsonb.py  b2c3d4e5f6a7_add_composite_indexes.py  (+96 more)
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agents/: __init__.py  skill_mapping.py
backend/app/api/: __init__.py  health.py  router.py
backend/app/core/: __init__.py  deps.py  encryption.py  logging.py  middleware.py  paths.py  permissions.py  security.py
backend/app/mcp/: __init__.py  audit.py  auth.py  contract_check.py  handler_utils.py  handlers_agent_activity.py  handlers_bud.py  handlers_bud_design.py  handlers_bud_writes.py  handlers_code_graph.py  handlers_feature_merge.py  handlers_features.py  handlers_hooks.py  handlers_knowledge.py  handlers_prompts.py  handlers_scan.py  handlers_team.py  handlers_todo.py  rate_limit.py  server.py  stdio_bridge.py  streamable.py  synth_feature_writer.py  synthesis_accumulator.py  synthesis_progress.py  synthesis_queue.py
backend/app/models/: __init__.py  agent_activity.py  agent_log.py  agent_skill.py  agent_skill_bud_stage.py  agent_skill_override.py  backend_route_cache.py  base.py  bud.py  bud_agent_task.py  bud_commit.py  bud_estimate_snapshot.py  bud_feature_link.py  bud_section_session.py  bud_stage_skill_override.py  bud_todo.py  bud_version.py  bug.py  cluster_cache.py  code_embedding.py  design_system.py  dev_activity.py  developer_xp.py  enterprise_rule.py  feature.py  feature_learning.py  feature_match_log.py  feature_to_repo.py  jira_import.py  jwt_token.py  knowledge_item.py  mcp_audit_log.py  notification.py  organization.py  permission.py  prd.py  pull_request.py  qa_test_evidence.py  race_result.py  repo_graph_cache.py  (+17 more)
backend/app/repositories/: __init__.py  bud.py  (+52 more)
backend/docker/: README.md  init-firewall.sh
backend/experiments/: __init__.py
backend/scripts/: __init__.py  mock_pr_webhook.py  reset_db.py  scan_analyzer.py  smoke_narrow_synth.py
backend/tests/: __init__.py  conftest.py
(+1241 files in other folders)
