[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

# Hatchling auto-detects the source directory by matching the project
# name (``bodhiorchard-backend`` → looks for ``bodhiorchard_backend/``).
# This project lives under ``app/`` instead, so the discovery has to be
# explicit — without this block, ``pip install -e ".[dev]"`` fails in
# fresh CI build envs with "Unable to determine which files to ship".
[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "bodhiorchard-backend"
version = "0.1.0"
description = "Bodhiorchard AI-powered software development platform backend"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "pyjwt[crypto]>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    # passlib 1.7.x reads `bcrypt.__about__.__version__`, removed in bcrypt 5.0.
    # Without this pin, passlib's backend probe raises ValueError on every
    # hash/verify call. Hold at 4.x until passlib 2.x ships.
    "bcrypt>=4.1,<5.0",
    "python-multipart>=0.0.6",
    "httpx>=0.27.0",
    "fastembed>=0.4.0",
    "pgvector>=0.2.4",
    "redis>=5.0.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0",
    "graphifyy[leiden]>=0.5.5,<0.6",
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "httpx>=0.27.0",
    # Opt-in: integration tests that need a real Postgres spin up an
    # ephemeral container via testcontainers. The default ``pytest``
    # suite does NOT exercise these — run with ``-m integration`` to
    # opt in, see ``tests/integration/conftest.py``.
    "testcontainers[postgres]>=4.14.0",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
# RUF006 catches ``asyncio.create_task(...)`` calls that don't hold the
# returned Task — the GC anchor bug that silently dropped dev_activity
# and member_presence publishes to Colyseus in the dashboard pipeline.
# See ``handlers_hooks._publish_tasks`` / ``event_bus._transport_tasks``
# for the correct pattern.
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "RUF006"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "networkx",
    "networkx.*",
    "graphify.*",
    "pgvector.*",
    "aioboto3",
    "yaml",
    "jose",
    "jose.*",
    "passlib.*",
    "cachetools",
    "testcontainers.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Heavy / Docker-dependent tests are gated behind the ``integration``
# marker so the default ``pytest`` run stays fast and works without
# Docker. Opt in with ``pytest -m integration`` once a Docker daemon
# is reachable (see ``tests/integration/conftest.py``).
markers = [
    "integration: spins up a real Postgres container; needs Docker.",
]
addopts = "-m 'not integration'"
